Bug 1917978 - Don't attempt to center fixed elements when the viewport size changes due to dynamic toolbars. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D226708